--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "dotenv": "^7.0.0",
     "mysql": "^2.16.0",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "xss": "^1.0.6"
   }
 }
